--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src = "Scripts/App.js" defer></script>
+    
     </head>
     <body>
-
+        <iframe src="https://giphy.com/embed/44Eq3Ab5LPYn6" width="480" height="437" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     </body>
 </html>
