--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     
     </head>
     <body>
-        <iframe src="https://giphy.com/embed/44Eq3Ab5LPYn6" width="480" height="437" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        <!--<iframe src="https://giphy.com/embed/44Eq3Ab5LPYn6" width="480" height="437" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>-->
     </body>
 </html>
