--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <!--<iframe src="https://giphy.com/embed/44Eq3Ab5LPYn6" width="480" height="437" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>-->
+    
+    Pluska removed this content... Later days VD
     </body>
 </html>
