--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     
     </head>
     <body>
-        <!--<iframe src="https://giphy.com/embed/44Eq3Ab5LPYn6" width="480" height="437" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>-->
+        <iframe src="https://giphy.com/embed/mP8GermRyOFWV8PQeq" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     
-    Pluska removed this content... Later days VD
     </body>
 </html>
