--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src = "scripts/App.js"></script>
+        <script src = "Scripts/App.js"></script>
     
     </head>
     <body>
